# replit-pygoop

./: .replit  README.md  README2.md  main.py  pyproject.toml  setup.py
examples/: advanced_usage.py  basic_proxy_example.py  basic_usage.py  llm_proxy_example.py  mock_proxy_example.py  test_mock_proxy.py  test_proxy.py
pygoop/: __init__.py  audit.py  cli.py  crawler.py  parser.py  proxy.py  telemetry.py  utils.py
templates/: index.html
